feat: indent with the retrospect template file

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -614,27 +614,31 @@
     #+END_SRC
 *** org-mode retrospect temlate
     #+BEGIN_SRC org :tangle (m/resolve "${m/home.d}/agendas/retrospect.tmpl") :noweb yes :mkdirp yes
-      |----------------------------+----|
-      | 我的长远目标是什么？       | %? |
-      |----------------------------+----|
-      | 昨天学到什么？             |    |
-      |----------------------------+----|
-      | 昨天得到什么教训？         |    |
-      |----------------------------+----|
-      | 费曼学习法实践案例？       |    |
-      |----------------------------+----|
-      | 昨天做了哪些换位思考？     |    |
-      |----------------------------+----|
-      | 昨天做了哪些倒推思维训练？ |    |
-      |----------------------------+----|
-      | 昨天发生的事情             |    |
-      | 我能提出什么问题           |    |
-      |----------------------------+----|
-      | 接下来有什么计划？         |    |
-      |                            |    |
-      |                            |    |
-      |                            |    |
-      |----------------------------+----|
+      %(make-string 2 ? ):PROPERTIES:
+      %(make-string 2 ? ):ID:       %(org-id-uuid)
+      %(make-string 2 ? ):CAPTURED_AT: %U
+      %(make-string 2 ? ):END:
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 我的长远目标是什么？       | %? |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 昨天学到什么？             |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 昨天得到什么教训？         |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 费曼学习法实践案例？       |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 昨天做了哪些换位思考？     |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 昨天做了哪些倒推思维训练？ |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 昨天发生的事情             |    |
+      %(make-string 2 ? )| 我能提出什么问题           |    |
+      %(make-string 2 ? )|----------------------------+----|
+      %(make-string 2 ? )| 接下来有什么计划？         |    |
+      %(make-string 2 ? )|                            |    |
+      %(make-string 2 ? )|                            |    |
+      %(make-string 2 ? )|                            |    |
+      %(make-string 2 ? )|----------------------------+----|
     #+END_SRC
 
 *** org-mode code template
