--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -131,6 +131,50 @@
 	   (sqlite . t))))
     #+END_SRC
 
+*** org-mode archive 配置
+    #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
+      (defadvice org-archive-subtree (around fix-hierarchy activate)
+	(let* ((fix-archive-p (and (not current-prefix-arg)
+				   (not (use-region-p))))
+	       (afile  (car (org-archive--compute-location
+			     (or (org-entry-get nil "ARCHIVE" 'inherit) org-archive-location))))
+	       (buffer (or (find-buffer-visiting afile) (find-file-noselect afile))))
+	  ad-do-it
+      
+	  (when fix-archive-p
+	    (with-current-buffer buffer
+	      (goto-char (point-max))
+	      (while (org-up-heading-safe))
+	      (let* ((olpath (org-entry-get (point) "ARCHIVE_OLPATH"))
+		     (path (and olpath (split-string olpath "/")))
+		     (level 1)
+		     tree-text)
+		(when olpath
+		  (org-mark-subtree)
+		  (setq tree-text (buffer-substring (region-beginning) (region-end)))
+		  (let (this-command) (org-cut-subtree))
+		  (goto-char (point-min))
+		  (save-restriction
+		    (widen)
+		    (-each path
+		      (lambda (heading)
+			(if (re-search-forward
+			     (rx-to-string
+			      `(: bol (repeat ,level "*") (1+ " ") ,heading)) nil t)
+			    (org-narrow-to-subtree)
+			  (goto-char (point-max))
+			  (unless (looking-at "^")
+			    (insert "\n"))
+			  (insert (make-string level ?*)
+				  " "
+				  heading
+				  "\n"))
+			(cl-incf level)))
+		    (widen)
+		    (org-end-of-subtree t t)
+		    (org-paste-subtree level tree-text))))))))
+    #+END_SRC
+
 *** org-mode 日程配置
     
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-literate.el") :comments link
@@ -170,7 +214,7 @@
 			    ,(expand-file-name "meeting.org" org-agenda-dir)
 			    ,(expand-file-name "retrospect.org" org-agenda-dir)
 			    ))
-	(org-archive-location (concat (expand-file-name "archive.org" org-agenda-dir) "::datetree/"))
+	(org-archive-location (concat (expand-file-name "archive.org" org-agenda-dir) "::"))
 	(org-archive-mark-done t)
 	(org-support-shift-select t)
       
