--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -72,6 +72,7 @@
       cask 'thunder'
       cask '1password'
       cask 'nutstore'
+      cask 'veracrypt'
 
       # broswer
       cask 'google-chrome'
