feat: enable insert the special character with c-u x(=,*,_)

--- a/hammers/emacs/editing.org
+++ b/hammers/emacs/editing.org
@@ -125,6 +125,58 @@
 	:bind ("C-x /" . goto-last-change))
     #+END_SRC
 
+*** 使用 C-u X 输入 X 对应的 org entities
+    #+BEGIN_SRC elisp :eval never :exports code :noweb yes :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
+      (defun m/org-entity-get-name (char)
+	"Return the entity name for CHAR. For example, return \"ast\" for *."
+	(let ((ll (append org-entities-user
+			  org-entities))
+	      e name utf8)
+	  (catch 'break
+	    (while ll
+	      (setq e (pop ll))
+	      (when (not (stringp e))
+		(setq utf8 (nth 6 e))
+		(when (string= char utf8)
+		  (setq name (car e))
+		  (throw 'break name)))))))
+      
+      (defun m/org-insert-org-entity-maybe (&rest args)
+	"When the universal prefix C-u is used before entering any character,
+	  insert the character's `org-entity' name if available.
+      
+	  If C-u prefix is not used and if `org-entity' name is not available, the
+	  returned value `entity-name' will be nil."
+	;; It would be fine to use just (this-command-keys) instead of
+	;; (substring (this-command-keys) -1) below in emacs 25+.
+	;; But if the user pressed "C-u *", then
+	;;  - in emacs 24.5, (this-command-keys) would return "^U*", and
+	;;  - in emacs 25.x, (this-command-keys) would return "*".
+	;; But in both versions, (substring (this-command-keys) -1) will return
+	;; "*", which is what we want.
+	;; http://thread.gmane.org/gmane.emacs.orgmode/106974/focus=106996
+	(let ((pressed-key (substring (this-command-keys) -1))
+	      entity-name)
+	  (when (and (listp args) (eq 4 (car args)))
+	    (setq entity-name (m/org-entity-get-name pressed-key))
+	    (when entity-name
+	      (setq entity-name (concat "\\" entity-name "{}"))
+	      (insert entity-name)
+	      (message (concat "Inserted `org-entity' "
+			       (propertize entity-name
+					   'face 'font-lock-function-name-face)
+			       " for the symbol "
+			       (propertize pressed-key
+					   'face 'font-lock-function-name-face)
+			       "."))))
+	  entity-name))
+      
+      ;; Run `org-self-insert-command' only if `m/org-insert-org-entity-maybe'
+      ;; returns nil.
+      (advice-add 'org-self-insert-command :before-until #'m/org-insert-org-entity-maybe)
+    #+END_SRC
+
+
 ** 剪切设置
 *** 浏览剪切历史
     #+BEGIN_SRC elisp :eval never :exports code :tangle (m/resolve "${m/conf.d}/lisp/init-editing.el") :comments link
