--- a/hammers/emacs/snippets/orgmode.org
+++ b/hammers/emacs/snippets/orgmode.org
@@ -86,13 +86,37 @@
       ,#+CATEGORIES: $6
       ,#+PROPERTY:    header-args        :comments org
       ,#+PROPERTY:    header-args        :mkdirp yes
-      ,#+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil \n:t
+      ,#+OPTIONS:     num:nil toc:nil todo:nil tasks:nil tags:nil \n:nil ^:true *:t <:t -:t f:t |:t ::t
       ,#+OPTIONS:     skip:nil author:nil email:nil creator:nil timestamp:nil
       ,#+INFOJS_OPT:  view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
       ,#+BIND:        org-preview-latex-image-directory "$7"
       ,#+OPTIONS:     tex:imagemagick
+      
+      ,#+LaTeX_CLASS: article
+      ,#+LaTeX_CLASS_OPTIONS: [12pt]
+      ,#+LaTeX_CLASS_OPTIONS: [koma,a5paper,landscape,twocolumn,utopia,10pt,listings-sv,microtype,paralist]
+      # No need for a table of contents, unless your paper is quite long.
+      # Use fancy looking fonts. If you don't have MinionPro installed,
+      # a good alternative is the Palatino-style pxfonts.
+      # See: [[http://www.tug.dk/FontCatalogue/pxfonts/][http://www.tug.dk/FontCatalogue/pxfonts/]]
       ,#+LATEX_HEADER:\usepackage{xeCJK}
-      ,#+LATEX_HEADER:\setCJKmainfont{Heiti SC}
+      ,#+LATEX_HEADER: \usepackage[scaled=.875]{inconsolata}
+      ,#+LATEX_HEADER: \usepackage[T1]{fontenc}
+      ,#+LATEX_HEADER: \usepackage[scaled]{beraserif}
+      ,#+LATEX_HEADER: \usepackage[scaled]{berasans}
+      ,#+LATEX_HEADER: \usepackage[scaled]{beramono}
+      # Set the spacing to double, as required in most papers.
+      ,#+LATEX_HEADER: \usepackage{setspace}
+      ,#+LATEX_HEADER: \doublespacing
+      # Fix the margins
+      ,#+LATEX_HEADER: \usepackage[margin=1in]{geometry}
+      # This line makes lists work better:
+      # It eliminates whitespace before/within a list and pushes it tt the left margin
+      ,#+LATEX_HEADER: \usepackage{enumitem}
+      ,#+LATEX_HEADER: \setlist[enumerate,itemize]{noitemsep,nolistsep,leftmargin=*}
+      # I always include this for my bibliographies
+      ,#+LATEX_HEADER: \usepackage[notes,isbn=false,backend=biber]{biblatex-chicago}
+      
       $0
     #+END_SRC
     
