--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -34,13 +34,13 @@
       mas "SwordSoft Screenink Free", id: 953841977
 
       # system
-      cask 'docker'
+      cask 'docker', greedy: true
       brew 'openjdk'
-      cask 'iterm2'
-      cask 'squirrel'
-      cask 'snipaste'
-      cask 'unshaky' # process the mac keyboard duplicate key problem
-      cask 'the-unarchiver'
+      cask 'iterm2', greedy: true
+      cask 'squirrel', greedy: true
+      cask 'snipaste', greedy: true
+      cask 'unshaky', greedy: true # process the mac keyboard duplicate key problem
+      cask 'the-unarchiver', greedy: true
       brew 'unar'
       # usb network sharing driver
       # cask 'horndis'
@@ -48,42 +48,42 @@
       brew 'boost'
 
       # ides
-      cask 'clion', greedy: false
+      cask 'clion', greedy: true, args: { appdir: "~/Applications/Versioned" }
 
       # virtualization
 
       # productivity
-      cask 'alfred'
-      cask 'xmind'
-      cask 'hammerspoon'
-      cask 'appcleaner'
-      cask 'cheatsheet'
-      cask 'postman'
+      cask 'alfred', greedy: true
+      cask 'xmind', greedy: true
+      cask 'hammerspoon', greedy: true
+      cask 'appcleaner', greedy: true
+      cask 'cheatsheet', greedy: true
+      cask 'postman', greedy: true
 
       # editor
-      cask 'sublime-text'
-      cask 'emacs'
+      cask 'sublime-text', greedy: true
+      cask 'emacs', greedy: true
 
       # storage
-      cask 'baidunetdisk'
-      cask 'baiducloud'
-      cask 'yinxiangbiji'
+      cask 'baidunetdisk', greedy: true
+      cask 'baiducloud', greedy: true
+      cask 'yinxiangbiji', greedy: true
       # cask 'dash'
-      cask 'thunder'
-      cask '1password'
-      cask 'nutstore'
-      cask 'veracrypt'
+      cask 'thunder', greedy: true
+      cask '1password', greedy: true
+      cask 'nutstore', greedy: true
+      cask 'veracrypt', greedy: true
 
       # broswer
-      cask 'google-chrome'
+      cask 'google-chrome', greedy: true
 
       # emacs
-      cask "mactex-no-gui"
+      cask "mactex-no-gui", greedy: true
       # terminal apps
       ## network
       brew 'inetutils' if OS.mac?
       brew 'coreutils' if OS.mac?
-      brew 'nmap'
+      brew 'nmap', greedy: true
       brew 'axel' # multiple thread downloader
       brew 'iperf'
       brew 'make'
@@ -118,29 +118,30 @@
       brew 'ninja'
       brew 'gcc'
       brew 'llvm'
+      brew 'php'
 
 
       # ic
       brew 'icarus-verilog'
-      cask 'kicad'
-      cask 'xquartz'
-      cask 'gtkwave'
+      cask 'kicad', greedy: true
+      cask 'xquartz', greedy: true
+      cask 'gtkwave', greedy: true
 
       # study
-      cask 'kindle'
+      cask 'kindle', greedy: true
       #cask 'youdaodict'
 
       # communication
-      cask 'qq'
-      cask 'wechat'
+      cask 'qq', greedy: true
+      cask 'wechat', greedy: true
 
       # entertain
-      cask 'neteasemusic'
-      cask 'qqmusic'
-      cask 'vlc'
+      cask 'neteasemusic', greedy: true
+      cask 'qqmusic', greedy: true
+      cask 'vlc', greedy: true
 
       # video processing
-      cask 'handbrake'  # 视屏压缩
+      cask 'handbrake', greedy: true  # 视屏压缩
     #+END_SRC
 
     #+BEGIN_SRC shell :tangle no :exports code :results output
